test/param/ferguson/field-name-wrong.good
field-name-wrong.chpl:8: error: field y not found in R
